{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 143,
  "lineage": "541a70b8-90d9-a6a0-d84f-333ad20e9545",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:route-table/rtb-07c38540aa8fa151a",
            "default_route_table_id": "rtb-07c38540aa8fa151a",
            "id": "rtb-07c38540aa8fa151a",
            "owner_id": "318201747845",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-003487c58a2e38fe4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_vpc_main_rt"
            },
            "tags_all": {
              "Name": "dev_vpc_main_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev_nat_gw",
            "aws_nat_gateway.dev_nat_gw",
            "aws_subnet.dev_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016451d8c225066b5",
            "association_id": "eipassoc-0389b7be3719a473f",
            "domain": "vpc",
            "id": "eipalloc-016451d8c225066b5",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-05373a00415e9c226",
            "private_dns": "ip-10-0-1-226.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.226",
            "public_dns": "ec2-52-74-49-134.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.49.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev_nat_gw"
            },
            "tags_all": {
              "Name": "dev_nat_gw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:internet-gateway/igw-0b0ce7ce0bc4f0fa3",
            "id": "igw-0b0ce7ce0bc4f0fa3",
            "owner_id": "318201747845",
            "tags": {
              "Name": "dev_igw"
            },
            "tags_all": {
              "Name": "dev_igw"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016451d8c225066b5",
            "connectivity_type": "public",
            "id": "nat-003487c58a2e38fe4",
            "network_interface_id": "eni-05373a00415e9c226",
            "private_ip": "10.0.1.226",
            "public_ip": "52.74.49.134",
            "subnet_id": "subnet-07be38c401df6687a",
            "tags": {
              "Name": "dev_nat_gw"
            },
            "tags_all": {
              "Name": "dev_nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.dev_nat_gw",
            "aws_subnet.dev_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "front_end_svr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fe-priv-a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:network-interface/eni-036e20c325d688100",
            "id": "eni-036e20c325d688100",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:b9:ee:6b:c5:d0",
            "owner_id": "318201747845",
            "private_ip": "10.0.3.52",
            "private_ip_list": [
              "10.0.3.52",
              "10.0.3.32"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.32",
              "10.0.3.52"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-080a98b456a046468"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3a3d2cb2f16abba",
            "tags": {
              "Name": "front_end_svr-fe-priv-a"
            },
            "tags_all": {
              "Name": "front_end_svr-fe-priv-a"
            }
          },
          "dependencies": [
            "aws_security_group.web_svr_sg",
            "aws_subnet.dev_subnet"
          ]
        },
        {
          "index_key": "fe-priv-b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:network-interface/eni-0f93a11f06a5af975",
            "id": "eni-0f93a11f06a5af975",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:0b:1f:6f:e6:5c",
            "owner_id": "318201747845",
            "private_ip": "10.0.4.69",
            "private_ip_list": [
              "10.0.4.69",
              "10.0.4.219"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.4.219",
              "10.0.4.69"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-080a98b456a046468"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c014515af4c69132",
            "tags": {
              "Name": "front_end_svr-fe-priv-b"
            },
            "tags_all": {
              "Name": "front_end_svr-fe-priv-b"
            }
          },
          "dependencies": [
            "aws_security_group.web_svr_sg",
            "aws_subnet.dev_subnet"
          ]
        },
        {
          "index_key": "fe-priv-c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:network-interface/eni-0fcc375ac613cfec4",
            "id": "eni-0fcc375ac613cfec4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:9f:b5:59:bf:6e",
            "owner_id": "318201747845",
            "private_ip": "10.0.5.209",
            "private_ip_list": [
              "10.0.5.209",
              "10.0.5.43"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.5.209",
              "10.0.5.43"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-080a98b456a046468"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b88e4bc29df62f87",
            "tags": {
              "Name": "front_end_svr-fe-priv-c"
            },
            "tags_all": {
              "Name": "front_end_svr-fe-priv-c"
            }
          },
          "dependencies": [
            "aws_security_group.web_svr_sg",
            "aws_subnet.dev_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ssh_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:network-interface/eni-0762e9ff3dc4e1dbe",
            "id": "eni-0762e9ff3dc4e1dbe",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:5a:09:b9:1b:36",
            "owner_id": "318201747845",
            "private_ip": "10.0.1.10",
            "private_ip_list": [
              "10.0.1.10",
              "10.0.1.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.10",
              "10.0.1.11"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-0f23e5bbbda69eb85"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07be38c401df6687a"
          },
          "dependencies": [
            "aws_security_group.ssh_gw_sg",
            "aws_subnet.dev_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_vpc_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:route-table/rtb-0818e94297faf4f6c",
            "id": "rtb-0818e94297faf4f6c",
            "owner_id": "318201747845",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0ce7ce0bc4f0fa3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_vpc_pub_rt"
            },
            "tags_all": {
              "Name": "dev_vpc_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pub_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4c79428fee1b0df",
            "route_table_id": "rtb-0818e94297faf4f6c",
            "subnet_id": "subnet-0f8aa4278d20ba1de"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_vpc_pub",
            "aws_subnet.dev_subnet",
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "pub-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f42d052fb9bfa5da",
            "route_table_id": "rtb-0818e94297faf4f6c",
            "subnet_id": "subnet-07be38c401df6687a"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_vpc_pub",
            "aws_subnet.dev_subnet",
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "pub-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b831b1e4fbd35c3",
            "route_table_id": "rtb-0818e94297faf4f6c",
            "subnet_id": "subnet-0f8ba9fec1a63fe98"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_vpc_pub",
            "aws_subnet.dev_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back_end_a_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:security-group/sg-062a04976697d98a9",
            "description": "Security Group to allow access to Back-end-A web server traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062a04976697d98a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.10/32"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.11/32"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "http from front end",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "https from front end",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "http from front end",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "https from front end",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.5.0/24"
                ],
                "description": "http from front end",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.5.0/24"
                ],
                "description": "https from front end",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.6.0/24"
                ],
                "description": "http for alb health check",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.6.0/24"
                ],
                "description": "https for alb health check",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.7.0/24"
                ],
                "description": "http for alb health check",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.7.0/24"
                ],
                "description": "https for alb health check",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.8.0/24"
                ],
                "description": "http for alb health check",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.8.0/24"
                ],
                "description": "https for alb health check",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "back_end_a_sg",
            "name_prefix": "",
            "owner_id": "318201747845",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "back_end_a"
            },
            "tags_all": {
              "Name": "back_end_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_interface.ssh_gw",
            "aws_security_group.ssh_gw_sg",
            "aws_subnet.dev_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back_end_b_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:security-group/sg-06045f566bddeea57",
            "description": "Security Group to allow access to Back-end-b web server traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06045f566bddeea57",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.10/32"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.11/32"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.10.0/24"
                ],
                "description": "http for alb health check",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.10.0/24"
                ],
                "description": "https for alb health check",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.11.0/24"
                ],
                "description": "http for alb health check",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.11.0/24"
                ],
                "description": "https for alb health check",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "http from front end",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "https from front end",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "http from front end",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "https from front end",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.5.0/24"
                ],
                "description": "http from front end",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.5.0/24"
                ],
                "description": "https from front end",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.9.0/24"
                ],
                "description": "http for alb health check",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.9.0/24"
                ],
                "description": "https for alb health check",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "back_end_b_sg",
            "name_prefix": "",
            "owner_id": "318201747845",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "back_end_b"
            },
            "tags_all": {
              "Name": "back_end_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_interface.ssh_gw",
            "aws_security_group.ssh_gw_sg",
            "aws_subnet.dev_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_gw_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:security-group/sg-0f23e5bbbda69eb85",
            "description": "Security Group to allow ssh access to the ssh gateway",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f23e5bbbda69eb85",
            "ingress": [
              {
                "cidr_blocks": [
                  "139.0.240.126/32"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_gw_sg",
            "name_prefix": "",
            "owner_id": "318201747845",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_gw"
            },
            "tags_all": {
              "Name": "ssh_gw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_svr_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:security-group/sg-080a98b456a046468",
            "description": "Security Group to allow internet web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080a98b456a046468",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http any",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https any",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.10/32"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.11/32"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_svr_sg",
            "name_prefix": "",
            "owner_id": "318201747845",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_svr"
            },
            "tags_all": {
              "Name": "web_svr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_interface.ssh_gw",
            "aws_security_group.ssh_gw_sg",
            "aws_subnet.dev_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bea-priv-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-03621e6d742b608a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03621e6d742b608a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-bea-priv-a"
            },
            "tags_all": {
              "Name": "dev-subnet-bea-priv-a"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "bea-priv-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-0ad89b261211b7c5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad89b261211b7c5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-bea-priv-b"
            },
            "tags_all": {
              "Name": "dev-subnet-bea-priv-b"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "bea-priv-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-04b655d0856989748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b655d0856989748",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-bea-priv-c"
            },
            "tags_all": {
              "Name": "dev-subnet-bea-priv-c"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "beb-priv-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-0e76c363f3cd5a825",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e76c363f3cd5a825",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-beb-priv-a"
            },
            "tags_all": {
              "Name": "dev-subnet-beb-priv-a"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "beb-priv-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-055e063576d47b4f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055e063576d47b4f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-beb-priv-b"
            },
            "tags_all": {
              "Name": "dev-subnet-beb-priv-b"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "beb-priv-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-0e9ab7aa53b7cf06a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9ab7aa53b7cf06a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-beb-priv-c"
            },
            "tags_all": {
              "Name": "dev-subnet-beb-priv-c"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "db-priv-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-0207f644b198c0550",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0207f644b198c0550",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-db-priv-a"
            },
            "tags_all": {
              "Name": "dev-subnet-db-priv-a"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "db-priv-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-08726fe949850db99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08726fe949850db99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-db-priv-b"
            },
            "tags_all": {
              "Name": "dev-subnet-db-priv-b"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "db-priv-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-03f088c41a144985e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f088c41a144985e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-db-priv-c"
            },
            "tags_all": {
              "Name": "dev-subnet-db-priv-c"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "fe-priv-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-0c3a3d2cb2f16abba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3a3d2cb2f16abba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-fe-priv-a"
            },
            "tags_all": {
              "Name": "dev-subnet-fe-priv-a"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "fe-priv-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-0c014515af4c69132",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c014515af4c69132",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-fe-priv-b"
            },
            "tags_all": {
              "Name": "dev-subnet-fe-priv-b"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "fe-priv-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-0b88e4bc29df62f87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b88e4bc29df62f87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-fe-priv-c"
            },
            "tags_all": {
              "Name": "dev-subnet-fe-priv-c"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "pub-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-0f8aa4278d20ba1de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8aa4278d20ba1de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-pub-a"
            },
            "tags_all": {
              "Name": "dev-subnet-pub-a"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "pub-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-07be38c401df6687a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07be38c401df6687a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-pub-b"
            },
            "tags_all": {
              "Name": "dev-subnet-pub-b"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": "pub-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:subnet/subnet-0f8ba9fec1a63fe98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8ba9fec1a63fe98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318201747845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-pub-c"
            },
            "tags_all": {
              "Name": "dev-subnet-pub-c"
            },
            "vpc_id": "vpc-0dd163f47082c7a17"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:318201747845:vpc/vpc-0dd163f47082c7a17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/19",
            "default_network_acl_id": "acl-0b2fe23625484ab42",
            "default_route_table_id": "rtb-07c38540aa8fa151a",
            "default_security_group_id": "sg-0955807a23e20f503",
            "dhcp_options_id": "dopt-00af992371657aa29",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dd163f47082c7a17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c38540aa8fa151a",
            "owner_id": "318201747845",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}